fix spacing for fonts

--- a/CSS/project.css
+++ b/CSS/project.css
@@ -46,12 +46,11 @@ h3 {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 400;
-    font-size: 49em;
+    font-size: 21em;
     margin: 0;
     text-align: center;
     color: white;
     padding: 0;
-    width: 100%;
     src: url('../fonts/raleway-v12-latin-regular.eot'); /* IE9 Compat Modes */
     src: local('Raleway'), local('Raleway-Regular'),
          url('../fonts/raleway-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
